# buildhl

./: .gitignore  CMakeLists.txt  README.md  project.teaspec
src/cpp/: buildhl_main.cpp
src/cpp/buildhl/: FileFilter.cpp  FileFilter.hpp  ProgressAnalyser.cpp  ProgressAnalyser.hpp  highlight.cpp  highlight.hpp  lexer.cpp  lexer.hpp  project_detect.cpp  project_detect.hpp
teas/: meta.json
teas/iostream/: iostream.teaspec
teas/iostream/iostream/: async_stream.hpp  block_stream.hpp  buffer_stream.hpp  file_stream.cpp  file_stream.hpp  iostream.cpp  iostream.hpp  line_text.hpp  memory_stream.hpp  ref_stream.hpp  stream_utility.hpp  sub_stream.hpp  virtual_stream.hpp  zero_stream.hpp
teas/nlohmann_json/: nlohmann_json.teaspec
teas/sqlite/: sqlite.teaspec
teas/subprocess/: subprocess.teaspec
teas/subprocess/subprocess/: ProcessBuilder.cpp
teas/teaport_utils/: ArgParse.cpp  ArgParse.hpp  CMakeLists.txt  DirCache.cpp  DirCache.hpp  DirGlob.cpp  DirGlob.hpp  ExitTransaction.cpp  ExitTransaction.hpp  Log.cpp  Log.hpp  SafePrintf.hpp  Sqlite3.cpp  Sqlite3.hpp  StringCache.cpp  StringCache.hpp  Version.cpp  Version.hpp  container_ops.hpp  environ.cpp  environ.hpp  exceptions.cpp  exceptions.hpp  fileutils.cpp  fileutils.hpp  git.cpp  git.hpp  hash.cpp  hash.hpp  jsonutils.cpp  jsonutils.hpp  link_scanner.cpp  link_scanner.hpp  shell.cpp  shell.hpp  stringutils.cpp  stringutils.hpp  teaport_utils.teaspec  windows_createprocess.cpp  windows_createprocess.hpp
